Refactor: Swagger config 운영 환경시 IP 주소 설정 변경